[package]
name = "survey-label-exporter"
version = "0.0.5"
description = "Survey Label Exporter"
authors = ["PelAtlas"]
edition = "2021"

[lib]
name = "survey_labeler"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csv = "1.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
thiserror = "1.0"
walkdir = "2.5"
